<resources>
    <string name="uri_login">http://healtsoft.com/API/Ind/login.php</string>
    <string name="app_name">HealtSoft Clinicas</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="color1">#000000</string>
    <string name="color2">#9e247a</string>
    <string name="color3">#d0900a</string>
    <string name="color4">#1897bd</string>
    <string name="color5">#d5b069</string>
    <string name="color6">#37ac33</string>
    <string name="color7">#54267e</string>
    <string name="color8">#e22216</string>
    <string name="color9">#b66eb2</string>
    <string name="color10">#1b9271</string>
    <string name="color11">#1667b1</string>
    <string name="color12">#82cce0</string>
    <string name="color13">#d1b3ce</string>
    <string name="color14">#3490DC</string>
    <string name="color15">#028858</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="consultorio_1">Consultorio 1</string>
    <string name="crear_evento_sin_pacientes">Para crear un evento necesitas tener pacientes y servivios registrados</string>
    <string name="algo_salio_mal">Algo salió mal</string>
    <string name="error_agregar_cita">No se pudo agregar la cita</string>
    <string name="hora_fecha_anteriores_agregar">La hora y fecha de la cita no pueden ser anteriores a la hora y fecha actuales</string>
    <string name="campo_requerido">El campo es requerido</string>
    <string name="sin_comentarios">Sin comentarios</string>
    <string name="error_update_cita">No se pudo actualizar la cita</string>
    <string name="hora_fecha_anteriores_update">La hora y fecha de la cita no pueden ser anteriores a la hora y fecha actuales</string>
    <string name="desea_eliminar_cita">¿Desea eliminar esta cita?</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="resumen_paciente">Resumen del paciente</string>
    <string name="historia_clinica">Historia clinica</string>
    <string name="signos_vitales">Signos vitales</string>
    <string name="notas_terapeuticas">Notas terapeuticas</string>
    <string name="url_storage">https://www.individual.healtsoft.com/storage/</string>
    <string name="error_ingresar_nota">Por favor ingrese una nota</string>
    <string name="update_correcto">Campo actualizado correctamente</string>
    <string name="url_personales">https://healtsoft.com/API/Ind/update/datos_personales.php</string>
    <string name="url_patologicos">https://healtsoft.com/API/Ind/update/datos_patologicos.php</string>
    <string name="url_consulta">https://healtsoft.com/API/Ind/update/datos_consulta.php</string>
    <string name="url_tto">https://healtsoft.com/API/Ind/update/dx_tto.php</string>
    <string name="limite_pacientes">Has alcanzado el limite de pacientes para tu tipo de suscripción</string>
    <string name="sin_internet">Sin acceso a internet</string>
    <string name="motivo_consulta">\"Motivo de consulta: \"</string>
    <string name="causa_molestia">\"Causa de la molestia: \"</string>
    <string name="url_healtsoft">https://individual.healtsoft.com</string>
    <string name="sin_suscripcion">No cuentas con una suscripcion activa, por favor verifica en nuestro sitio web</string>
    <string name="ok">OK</string>
    <string name="ir_sitio">Ir al sitio</string>
    <string name="agenda">Agenda</string>
    <string name="pacientes2">PACIENTES</string>
    <string name="pacientes">Pacientes</string>
    <string name="crear_paciente">Crear paciente</string>
    <string name="perfil">Perfil</string>
    <string name="presionar_otra_vez">Vuelve a presionar para salir</string>
    <string name="url_aviso_privacidad">https://healtsoft.com/docs/AvisoPrivacidad.html</string>
    <string name="desea_cerrar_sesion">¿Desea cerrar sesión?</string>
    <string name="pacientes_registrados">\" Pacientes registrados\"</string>
    <string name="eventos_registrados">\" Eventos registrados\"</string>

    //new desing
    <string name="acceso">Acceso</string>
    <string name="verificar_contraseña">Verifique su contraseña</string>
    <string name="verificar_correo">Verifique su correo</string>
    <string name="verificar_clinica">Verifique su código de clínica</string>
    <string name="correo_electronico">Correo eléctronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="codigo_de_clinica">Codigo de clínica</string>
    <string name="acceder">Acceder</string>
    <string name="logo">Logo</string>
    <string name="mantener_mi_sesion_abierta">Mantener mi sesión abierta</string>
    <string name="cuenta_inactiva">Tu cuenta ha sido desactivada</string>
    <string name="servicios">Servicios</string>
    <string name="historias_clinicas">Historias clinicas</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="usuarios">Usuarios</string>
    <string name="dashboard_mensual">Dashboard mensual</string>
    <string name="administracion">ADMINISTRACIÓN</string>
    <string name="citas">CITAS</string>
    <string name="agendar">Agendar cita</string>
    <string name="cargando">Cargando</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>