<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_admon">
        <item android:id="@+id/nav_item_admon"
            android:checkable="false"
            android:enabled="false"
            android:iconTint="@color/white"
            android:title="@string/administracion" />
        <item android:id="@+id/nav_item_dashboard"
            android:checkable="true"
            android:iconTint="@color/white"
            android:icon="@drawable/ic_menu_inicio_icon"
            android:title="@string/dashboard_mensual" />
        <item android:id="@+id/nav_item_usuarios"
            android:icon="@drawable/ic_menu_usuarios_icon"
            android:iconTint="@color/white"
            android:checkable="true"
            android:title="@string/usuarios" />
        <item android:id="@+id/nav_item_servicios"
            android:icon="@drawable/ic_menu_servicios_icon"
            android:checkable="true"
            android:iconTint="@color/white"
            android:title="@string/servicios" />
        <item android:id="@+id/nav_item_historias"
            android:icon="@drawable/ic_menu_historias_icon"
            android:checkable="true"
            android:iconTint="@color/white"
            android:title="@string/historias_clinicas" />
        <item android:id="@+id/nav_item_estadisticas"
            android:icon="@drawable/ic_menu_estadisticas_icon"
            android:iconTint="@color/white"
            android:checkable="true"
            android:title="@string/estadisticas" />
    </group>
    <group android:id="@+id/group_citas">
        <item android:id="@+id/nav_item_citas"
            android:checkable="false"
            android:enabled="false"
            android:iconTint="@color/white"
            android:title="@string/citas"/>
        <item android:id="@+id/nav_item_agenda"
            android:icon="@drawable/ic_menu_agenda_icon"
            android:checkable="true"
            android:checked="true"
            android:iconTint="@color/white"
            android:title="@string/agenda" />
        <item android:id="@+id/nav_item_agendar"
            android:icon="@drawable/ic_menu_agendar_icon"
            android:checkable="false"
            android:iconTint="@color/white"
            android:title="@string/agendar" />
    </group>
    <group android:id="@+id/group_pacientes">
        <item android:id="@+id/nav_item_pacientest"
            android:title="@string/pacientes2"
            android:iconTint="@color/white"
            android:checkable="false"
            android:enabled="false"/>
        <item android:id="@+id/nav_item_pacientes"
            android:icon="@drawable/ic_menu_pacientes_icon"
            android:checkable="true"
            android:iconTint="@color/white"
            android:title="@string/pacientes"/>
        <item android:id="@+id/nav_item_crear_paciente"
            android:icon="@drawable/ic_menu_add_paciente_icon"
            android:iconTint="@color/white"
            android:checkable="false"
            android:title="@string/crear_paciente"/>
        <item android:id="@+id/nav_item_logout"
            android:title="@string/cerrar_sesion"
            android:icon="@drawable/ic_menu_logout_icon"
            android:iconTint="@color/white"
            android:checkable="true"/>
    </group>
</menu>