<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.Usuario.Activity_Login">
    <ScrollView
        android:background="@color/loginBackground"
        android:id="@+id/layoutLogin"
        android:layout_height="match_parent"
        android:layout_width="fill_parent">
        <LinearLayout
            android:background="@drawable/gray_border"
            android:layout_margin="@dimen/common_30_dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:minHeight="600dp"
            android:layout_height="600dp">
            <LinearLayout
                android:layout_marginTop="1dip"
                android:layout_marginRight="1dip"
                android:layout_marginLeft="1dip"
                android:background="@color/grayBackground"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight=".55"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/ic_logo_healtsoft"/>
                <TextView
                    android:layout_marginBottom="@dimen/common_10_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/acceso"
                    android:textColor="@color/primaryBlueColor"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:layout_marginBottom="1dip"
                android:layout_marginRight="1dip"
                android:layout_marginLeft="1dip"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_weight=".45">
                <EditText
                    android:layout_marginRight="@dimen/common_25_dp"
                    android:layout_marginLeft="@dimen/common_25_dp"
                    android:layout_marginTop="@dimen/common_20_dp"
                    android:id="@+id/txtCorreo"
                    android:background="@drawable/lightgray_border"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_30_dp"
                    android:padding="5dp"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:hint="@string/correo_electronico"/>
                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_30_dp"
                    android:layout_marginLeft="@dimen/common_25_dp"
                    android:layout_marginTop="@dimen/common_20_dp"
                    android:layout_marginRight="@dimen/common_25_dp"
                    android:background="@drawable/lightgray_border"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textSize="12sp" />
                <EditText
                    android:layout_marginRight="@dimen/common_25_dp"
                    android:layout_marginLeft="@dimen/common_25_dp"
                    android:layout_marginTop="@dimen/common_20_dp"
                    android:id="@+id/txtClinic"
                    android:background="@drawable/lightgray_border"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_30_dp"
                    android:textSize="12sp"
                    android:inputType="textCapCharacters"
                    android:hint="@string/codigo_de_clinica"/>
                <Button
                    android:layout_marginRight="@dimen/common_50_dp"
                    android:layout_marginLeft="@dimen/common_50_dp"
                    android:layout_marginTop="@dimen/common_20_dp"
                    android:backgroundTint="@color/green"
                    android:background="@drawable/corner_radius_shape"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_30_dp"
                    android:id="@+id/btnLogin"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/acceder"/>
                <CheckBox
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/common_50_dp"
                    android:layout_marginRight="@dimen/common_50_dp"
                    android:id="@+id/chkSesion"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/mantener_mi_sesion_abierta" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Spinner
                        android:layout_margin="@dimen/common_15_dp"
                        android:id="@+id/spClinica"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autofillHints="Paciente"
                        android:background="@drawable/gray_border_radius"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>